final touch but ref wrap not solved

--- a/src/sass/base/_shared-styles.scss
+++ b/src/sass/base/_shared-styles.scss
@@ -143,3 +143,8 @@
 .color-black {
   color: var(--color-black) !important;
 }
+
+// TEXT UTILS
+.text-now-wrap {
+  white-space: nowrap !important;
+}
